--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -33,9 +33,18 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
+          <label for="facebook_link">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-        </div>
+      </div>
+      <div class="form-group">
+        <label for="seeking_talent">Looking for artists?</label>
+        {{ form.seeking_talent(class_ = 'form-control', id=form.state, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="seeking_description">Tell us what you would like to book</label>
+        {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+      </div>
+      
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
