--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -28,9 +28,17 @@
           {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
         </div>
       <div class="form-group">
+          <label for="image_link">Image Link</label>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+      </div>
+      <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="website_link">Website Link</label>
+        {{ form.website_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
       </div>
       <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
