--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -24,15 +24,31 @@
           {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
         </div>
       <div class="form-group">
+          <label for="image_link">Image Link</label>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+      </div>
+      <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
       </div>
       <div class="form-group">
+        <label for="website_link">Website Link</label>
+        {{ form.website_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+      </div>
+      <div class="form-group">
           <label for="genres">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
         </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+      <div class="form-group">
+        <label for="seeking_talent">Looking for venues?</label>
+        {{ form.seeking_venues(class_ = 'form-control', id=form.state, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="seeking_description">Tell us about yourself</label>
+        {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+      </div>
+      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
